# petrodb

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
src/petroapi/: __init__.py  auth.py  config.py  database.py  models.py  schema.py
src/petroapi/routers/: areas.py  profiles.py  profilespots.py  projects.py  samples.py  search.py  spots.py  token.py  users.py
src/petroapi/templates/: index.html
